--- a/amf.opam
+++ b/amf.opam
@@ -8,26 +8,14 @@ homepage: "https://briancaine.github.io/ocaml-amf/"
 bug-reports: "https://github.com/briancaine/ocaml-amf/issues"
 license: "LGPL with OCaml linking exception"
 build: [
-  ["oasis" "setup"]
-  ["./configure" "--prefix=%{prefix}%"]
-  [make]
+  ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 build-test: [
-  ["oasis" "setup"]
-  ["./configure" "--enable-tests"]
   [make "test"]
-]
-build-doc: [
-  ["oasis" "setup"]
-  [make "doc"]
-]
-install: [
-  ["oasis" "setup"]
-  [make "install"]
 ]
 remove: ["ocamlfind" "remove" "amf"]
 depends: [
-  ("oasis" {build} | "oasis-mirage" {build})
+  "jbuilder"                {build & >= "1.0+beta12"}
 
   "ppx_deriving" {build}
   "ppx_sexp_conv" {build}
@@ -36,7 +24,6 @@ depends: [
   "stdint"
   "sexplib"
   "bisect_ppx" {build}
-  "bisect_ppx-ocamlbuild" {build}
   "ounit" {build}
 ]
 available: [ ocaml-version >= "4.01" ]
