--- a/amf.opam
+++ b/amf.opam
@@ -10,13 +10,13 @@ bug-reports: "https://github.com/briancaine/ocaml-amf/issues"
 license: "LGPL with OCaml linking exception"
 build: [
   ["dune" "build" "-p" name "-j" jobs]
-  [make "test"] {with-test}
+  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 depends: [
-  "ocaml" {>= "4.01"}
-  "dune" {build & >= "1.0"}
-  "ppx_deriving" {build}
-  "ppx_sexp_conv" {build}
+  "ocaml" {> "4.03"}
+  "dune" {>= "1.0"}
+  "ppx_deriving"
+  "ppx_sexp_conv"
   "base-threads"
   "core" {>= "v0.9.1"}
   "stdint"
