--- a/amf.opam
+++ b/amf.opam
@@ -13,7 +13,7 @@ build: [
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 depends: [
-  "ocaml" {> "4.03"}
+  "ocaml" {>= "4.04"}
   "dune" {>= "1.0"}
   "ppx_deriving"
   "ppx_sexp_conv"
@@ -21,6 +21,6 @@ depends: [
   "core" {>= "v0.9.1"}
   "stdint"
   "sexplib"
-  "bisect_ppx" {build}
-  "ounit" {build}
+  "bisect_ppx" {with-test}
+  "ounit" {with-test}
 ]
